--- a/src/components/prodctsList/productsList.module.css
+++ b/src/components/prodctsList/productsList.module.css
@@ -1,7 +1,7 @@
 .containerProducts {
   display: flex;
   flex-wrap: wrap;
-  margin: 2rem 15rem;
+  margin: 2rem 7rem;
   gap: 1rem;
   justify-content: space-between;
   height: 100%;
@@ -35,6 +35,7 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: 18px;
 }
 .price {
   background: #000;
