--- a/src/components/prodctsList/productsList.module.css
+++ b/src/components/prodctsList/productsList.module.css
@@ -9,11 +9,11 @@
 }
 .container {
   background-color: #ffffff;
-  width: 14rem;
+  width: 13rem;
   box-shadow: 0 0 0.7rem 0rem #a0a0a0;
   max-height: 19rem;
   margin-bottom: 2rem;
-  border-radius: 1rem 1rem 0 0;
+  border-radius: 1rem 1rem;
 }
 
 .products {
